--- a/assets/css/colors.scss
+++ b/assets/css/colors.scss
@@ -19,7 +19,10 @@
   --warning-background: #f2c894;
   --warning-background-color: #d35400;
   --error: #e17055;
+  --error-text: white;
   --info: #74b9ff;
+
+  --modal-background: var(--background);
 }
 
 [data-theme="dark"] {
@@ -42,7 +45,10 @@
   --warning-background: #ac5a04;
   --warning-background-color: var(--emphasis-text-color);
   --error: #ff7676;
+  --error-text: white;
   --info: #3a637c;
+
+  --modal-background: var(--surface);
 }
 
 $background: var(--background);
@@ -64,4 +70,7 @@ $warning: var(--warning);
 $warning-background: var(--warning-background);
 $warning-background-color: var(--warning-background-color);
 $error: var(--error);
+$error-text: var(--error-text);
 $info: var(--info);
+
+$modal-dialog-background: var(--modal-background);
